--- a/itil.html
+++ b/itil.html
@@ -8,7 +8,23 @@
 <body>
     <h1>Қош келдіңіз!</h1>
     <h2>Ағылшын және Орыс тілін үйрену (A1-A2)</h2>
-    <button onclick="startEnglish()">Ағылшын тапсырмалары</button>
+    <button onclick="startEnglish()">Ағылшын т<!DOCTYPE html>
+<html lang="kk">
+<head>
+    <meta charset="UTF-8">
+    <title>Тіл үйрету - A1-A2 деңгей</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Ағылшын және Орыс тілдері бойынша тапсырмалар</h1>
+    <div id="taskContainer"></div>
+    <button onclick="showScore()">Нәтиже</button>
+    <div id="scoreDisplay"></div>
+
+    <script src="script.js"></script>
+</body>
+</html>
+апсырмалары</button>
     <button onclick="startRussian()">Орыс тапсырмалары</button>
     <div id="content"></div>
 
